[project]
name = "filepicker_exp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.5",
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop-light>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "com.mycompany"
product = "filepicker_exp-4"
company = "jogfeeling"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "."
