[project]
name = "filepicker_exp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet==0.80.4",
]

[dependency-groups]
dev = [
    "flet[all]==0.80.4",
]

[tool.flet]
org = "com.mycompany"
product = "filepicker_exp-4"
company = "jogfeeling"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "."
