[project]
name = "filepicker_exp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.5",
]

[dependency-groups]
dev = [
    "flet[all]>=0.80.5",
]

[tool.flet]
org = "com.zyx"
product = "filepicker_issue"
company = "xyz"
copyright = "Copyright (C) 2026 by XYZ"

[tool.flet.app]
path = "."
